hphp/hack/test/typecheck/enum_stringish_bad_1.php.rust_elab.exp
File "enum_stringish_bad_1.php", line 4, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum_stringish_bad_1.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
  File "enum_stringish_bad_1.php", line 9, characters 22-30:
  Expected `Stringish`
  File "enum_stringish_bad_1.php", line 9, characters 15-15:
  But got `arraykey` arising from an implicit `as arraykey` constraint on this type
